Ensure the download button has the appropriate z-index
Fixes WEBSITE-148

--- a/content/css/jenkins.css
+++ b/content/css/jenkins.css
@@ -225,6 +225,11 @@ nav form.search .input-group>input.form-control:focus{opacity:1; width:12rem}
   display: none
 }
 
+/* https://issues.jenkins-ci.org/browse/WEBSITE-148  */
+.carousel-inner {
+  z-index: 8;
+}
+
 #ji-download {
  top: 17rem;
  right: 0;
